<resources>
    <string name="app_name">TV Companion</string>
    <string name="screen_type">Phone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_recommendations">Recommendations</string>
    <string name="nav_find_shows">Find Shows</string>
    <string name="nav_my_shows">My Shows</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="ep_watched">Watched</string>
    <string name="ep_not_watched">Not Watched</string>
    <string name="season">Season</string>
    <string name="genre">Genre</string>
    <string name="action_search">Search</string>
    <string name="action_sort_by">Sort By</string>
    <string-array name="sort_options">
        <item>A-Z</item>
        <item>Rating</item>
        <item>New-Old</item>
        <item>Old-new</item>
    </string-array>
    <string-array name="find_shows_tabs">
        <item>Trending</item>
        <item>Most Popular</item>
        <item>Search</item>
    </string-array>
    <string name="desc_watchers">Watchers</string>
    <string name="desc_plays">Plays</string>
    <string name="desc_likes">Likes</string>
    <string name="desc_cover">Cover photo</string>
    <string name="desc_poster">Poster photo</string>
    <string name="desc_add_fab">Watch all episodes and add to shows</string>
    <string name="desc_remove_fab">Remove show and unwatch all episodes</string>
    <string name="login_desc">This app uses the trakt.tv API to get TV show information, your watch history, and recommendations. Click the button below to login or create a new account on trakt.tv.</string>
    <string name="app">Application</string>
    <string name="action_refresh">Refresh</string>
    <string name="long_text">Until now, with the release of the Folger Digital Texts, readers in search of a free online text of Shakespeare’s plays had to be content primarily with using the Moby™ Text, which reproduces a late-nineteenth century version of the plays. What is the difference? Many ordinary readers assume that there is a single text for the plays: what Shakespeare wrote. But Shakespeare’s plays were not published the way modern novels or plays are published today: as a single, authoritative text. In some cases, the plays have come down to us in multiple published versions, represented by various Quartos (Qq) and by the great collection put together by his colleagues in 1623, called the First Folio (F). There are, for example, three very different versions of Hamlet, two of King Lear, Henry V, Romeo and Juliet, and others. Editors choose which version to use as their base text, and then amend that text with words, lines or speech prefixes from the other versions that, in their judgment, make for a better or more accurate text.  Other editorial decisions involve choices about whether an unfamiliar word could be understood in light of other writings of the period or whether it should be changed; decisions about words that made it into Shakespeare’s text by accident through four hundred years of printings and misprinting; and even decisions based on cultural preference and taste. When the Moby™ Text was created, for example, it was deemed “improper” and “indecent” for Miranda to chastise Caliban for having attempted to rape her. (See The Tempest, 1.2: “Abhorred slave,/Which any print of goodness wilt not take,/Being capable of all ill! I pitied thee…”). All Shakespeare editors at the time took the speech away from her and gave it to her father, Prospero.  The editors of the Moby™ Shakespeare produced their text long before scholars fully understood the proper grounds on which to make the thousands of decisions that Shakespeare editors face. The Folger Library Shakespeare Editions, on which the Folger Digital Texts depend, make this editorial process as nearly transparent as is possible, in contrast to older texts, like the Moby™, which hide editorial interventions. The reader of the Folger Shakespeare knows where the text has been altered because editorial interventions are signaled by square brackets (for example, from Othello: “square bracketIf she in chains of magic were not bound,square bracket”), half-square brackets (for example, from Henry V: “With half-square bracketbloodhalf-square bracket and sword and fire to win your right,”), or angle brackets (for example, from Hamlet: “O farewell, honest angle bracketsoldier.angle bracket Who hath relieved/you?”). At any point in the text, you can hover your cursor over a bracket for more information.  Because the Folger Digital Texts are edited in accord with twenty-first century knowledge about Shakespeare’s texts, the Folger here provides them to readers, scholars, teachers, actors, directors, and students, free of charge, confident of their quality as texts of the plays and pleased to be able to make this contribution to the study and enjoyment of Shakespeare.Until now, with the release of the Folger Digital Texts, readers in search of a free online text of Shakespeare’s plays had to be content primarily with using the Moby™ Text, which reproduces a late-nineteenth century version of the plays. What is the difference? Many ordinary readers assume that there is a single text for the plays: what Shakespeare wrote. But Shakespeare’s plays were not published the way modern novels or plays are published today: as a single, authoritative text. In some cases, the plays have come down to us in multiple published versions, represented by various Quartos (Qq) and by the great collection put together by his colleagues in 1623, called the First Folio (F). There are, for example, three very different versions of Hamlet, two of King Lear, Henry V, Romeo and Juliet, and others. Editors choose which version to use as their base text, and then amend that text with words, lines or speech prefixes from the other versions that, in their judgment, make for a better or more accurate text.  Other editorial decisions involve choices about whether an unfamiliar word could be understood in light of other writings of the period or whether it should be changed; decisions about words that made it into Shakespeare’s text by accident through four hundred years of printings and misprinting; and even decisions based on cultural preference and taste. When the Moby™ Text was created, for example, it was deemed “improper” and “indecent” for Miranda to chastise Caliban for having attempted to rape her. (See The Tempest, 1.2: “Abhorred slave,/Which any print of goodness wilt not take,/Being capable of all ill! I pitied thee…”). All Shakespeare editors at the time took the speech away from her and gave it to her father, Prospero.  The editors of the Moby™ Shakespeare produced their text long before scholars fully understood the proper grounds on which to make the thousands of decisions that Shakespeare editors face. The Folger Library Shakespeare Editions, on which the Folger Digital Texts depend, make this editorial process as nearly transparent as is possible, in contrast to older texts, like the Moby™, which hide editorial interventions. The reader of the Folger Shakespeare knows where the text has been altered because editorial interventions are signaled by square brackets (for example, from Othello: “square bracketIf she in chains of magic were not bound,square bracket”), half-square brackets (for example, from Henry V: “With half-square bracketbloodhalf-square bracket and sword and fire to win your right,”), or angle brackets (for example, from Hamlet: “O farewell, honest angle bracketsoldier.angle bracket Who hath relieved/you?”). At any point in the text, you can hover your cursor over a bracket for more information.  Because the Folger Digital Texts are edited in accord with twenty-first century knowledge about Shakespeare’s texts, the Folger here provides them to readers, scholars, teachers, actors, directors, and students, free of charge, confident of their quality as texts of the plays and pleased to be able to make this contribution to the study and enjoyment of Shakespeare.</string>
    <string name="poster_transition">poster transition</string>
    <string name="title_transition">title transition</string>
    <string name="big_art">big art</string>
    <string name="genre_transition">genre transition</string>
    <string name="seasons_format">"%1$d seasons"</string>
    <string name="log_in">Log In</string>
    <string name="text_more_info">To see episodes, rating, genres, and view stats click the add button. You can click the checkmark to remove the show afterwards if desired</string>
    <string name="full_sync">Full Sync</string>
    <string name="last_sync_format">last synced %1$d %2$s ago</string>
    <string name="full_sync_message">Full sync in progress. This may take a couple minutes…</string>
    <string name="short_sync_message">Sync in progress, this may take a minute…</string>
    <string name="sync_complete">Sync complete</string>
    <string name="still_sync">Still syncing…</string>
    <string name="login_bg">Login background</string>
    <string name="remove_recommendation">Remove from recommendations</string>
    <string name="view_browser">View show in browser</string>
    <string name="add_watchlist">Add to watchlist</string>
    <string name="no_watch_history">You have no watch history. Go to find shows.</string>
    <string name="ok">OK</string>
    <string name="no_recommendations">Add shows then sync to get recommendations.</string>
    <string name="main_banner_ad_unit_id">ca-app-pub-6177115838392476/3147329145</string>
    <string name="one_sec">One second</string>
    <string name="removed_show">Removed show and all episodes from watched history</string>
    <string name="remove_show_fail">Could not remove from trakt, try again later. Most likely due to connectivity issues</string>
    <string name="watchers">%1$s watchers</string>
    <string name="players">%1$s plays</string>
    <string name="added_show">Added show and all episodes to watched history</string>
    <string name="add_show_failed">Could not add to trakt, try again later. Most likely due to connectivity issues</string>
    <string name="genres">genres: </string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="milliseconds">milliseconds</string>
    <string name="no_sync">not synced yet</string>
    <string name="adding_watchlist">Adding to watchlist…</string>
    <string name="remove_recommendation_fail">Couldn\'t remove recommendation from trakt, most likely due to a connection issue</string>
    <string name="watchlist_added">Added to watchlist and recommendations updated!</string>
    <string name="updating_recommendations">Updating recommendations…</string>
    <string name="recommendations_updated">Recommendations updated!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="clear_data_msg">Are you sure you want to clear show and episode data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="please_wait">Please wait…</string>
    <string name="nav_watchlist">Watchlist</string>
    <string name="no_Watchlist">No watchlist, long press shows to add them to watchlist</string>
    <string name="logout">Logout</string>
    <string name="fab_update">Update show and episodes</string>
    <string name="fab_browser">Open show in browser</string>
    <string name="sync_interval">Sync interval</string>
    <string name="night_mode">Night mode</string>
    <string name="clear_data">Clear show and episode data</string>
    <string name="remove_ads">Remove ads</string>
</resources>