<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recommendation"
            android:icon="@drawable/ic_add_box_black"
            android:title="@string/nav_recommendations" />
        <item
            android:id="@+id/nav_find_shows"
            android:icon="@drawable/ic_search_black"
            android:title="@string/nav_find_shows" />
        <item
            android:id="@+id/nav_my_shows"
            android:icon="@drawable/ic_local_movies_black"
            android:title="@string/nav_my_shows" />
    </group>

    <item android:title="@string/app">
        <menu>
            <item android:checkable="true"
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/nav_settings" />
            <item
                android:checkable="true"
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
