<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="?attr/cardBackgroundColor"
    style="?attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="?attr/buttonBarStyle"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/long_press_browser"
            style="?buttonBarButtonStyle"
            android:drawableTop="@drawable/ic_open_in_browser_white"
            android:text="@string/view_browser"
            android:textColor="?attr/textColor"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/remove_recommendation"
            style="?buttonBarButtonStyle"
            android:drawableTop="@drawable/ic_close_white"
            android:text="@string/remove_recommendation"
            android:textColor="?attr/textColor"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />


    </LinearLayout>

    <Button
        android:id="@+id/long_press_add_watchlist"
        style="?buttonBarButtonStyle"
        android:drawableTop="@drawable/ic_add_white"
        android:text="@string/add_watchlist"
        android:textColor="?attr/textColor"
        android:layout_width="match_parent"
        android:layout_height="100dp" />


</LinearLayout>