<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="apps.novin.tvcompanion.LoginActivity">

    <ImageView
        android:id="@+id/login_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/login_bg" />

    <android.support.v7.widget.CardView
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center_vertical|top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:background="#00000000"
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/login_desc"/>

    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/log_in_button"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="50dp"
        android:text="@string/log_in"
        android:onClick="onLogIn"/>
</FrameLayout>
