<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        style="?attr/buttonBarStyle"
        android:layout_height="match_parent">

        <LinearLayout
            style="?attr/buttonBarStyle"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <Button
                android:id="@+id/long_press_browser"
                style="?buttonBarButtonStyle"
                android:drawableTop="@drawable/ic_open_in_browser_black"
                android:text="@string/view_browser"
                android:textColor="#000000"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/remove_recommendation"
                style="?buttonBarButtonStyle"
                android:drawableTop="@drawable/ic_close_black"
                android:text="@string/remove_recommendation"
                android:textColor="#000000"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />


        </LinearLayout>

        <Button
            android:id="@+id/long_press_add_watchlist"
            style="?buttonBarButtonStyle"
            android:drawableTop="@drawable/ic_add_black"
            android:text="@string/add_watchlist"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="100dp" />


    </LinearLayout>
</android.support.v7.widget.CardView>
