<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowDetailActivity"
    tools:showIn="@layout/activity_show_detail"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="@string/title_transition"
        android:text="Mr. Robot"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:id="@+id/title"
        tools:ignore="HardcodedText"
        tools:targetApi="lollipop"
        app:layout_constraintLeft_toLeftOf="@+id/content_frame"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/content_frame"
        android:layout_marginTop="80dp" />

    <TextView
        android:text="Genres: Drama, Crime, Thriller"
        android:transitionName="@string/genre_transition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genres"
        android:textSize="14sp"
        tools:ignore="HardcodedText"
        android:textStyle="normal|italic"
        tools:targetApi="lollipop"
        app:layout_constraintLeft_toLeftOf="@+id/content_frame"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginTop="8dp" />

    <TextView
        android:text="The show follows Elliot, who is a cyber-security tech by day and vigilante hacker by night. He has used his hacking skills for justice and to protect those he cares about, but has problems connecting to people in the real world due to social anxiety. He strongly believes that the world is being ruled by the 1% of the 1% and, that using money and debt, they have enslaved mankind and he wishes desperately to change this. He is recruited by the head of a highly secret hacking group to take down the corporation he is being paid to protect with the hope of erasing 70% of all the debt in the world. He has had delusions in the past and sees a therapist who tries to help him and takes medication for it, but in the end he is unsure what is real and what is not, and so are we as we experience everything from his perspective."
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/about"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/content_frame"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/genres"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/content_frame"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:text="2014"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/year"
        android:textSize="24sp"
        tools:ignore="HardcodedText"
        android:textStyle="normal|bold"
        app:layout_constraintRight_toRightOf="@+id/content_frame"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/title" />

    <TextView
        android:text="81k watchers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/watchers"
        tools:ignore="HardcodedText"
        app:layout_constraintTop_toTopOf="@+id/content_frame"
        android:layout_marginTop="32dp"
        app:layout_constraintRight_toRightOf="@+id/year" />

    <TextView
        android:text="6.1m plays"
        android:layout_height="wrap_content"
        android:id="@+id/plays"
        android:layout_width="wrap_content"
        tools:ignore="HardcodedText"
        app:layout_constraintLeft_toLeftOf="@+id/watchers"
        app:layout_constraintTop_toBottomOf="@+id/watchers"
        app:layout_constraintBottom_toTopOf="@+id/year"
        android:layout_marginBottom="8dp" />

    <ImageView
        android:src="@drawable/ic_visibility_black"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/imageView2"
        android:contentDescription="@string/desc_watchers"
        app:layout_constraintTop_toBottomOf="@+id/watchers"
        app:layout_constraintRight_toLeftOf="@+id/plays"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/watchers" />

    <TextView
        android:text="90%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/percent"
        tools:ignore="HardcodedText"
        app:layout_constraintRight_toLeftOf="@+id/imageView2"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/plays" />

    <ImageView
        android:src="@drawable/ic_heart"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/imageView4"
        android:contentDescription="@string/desc_likes"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintRight_toLeftOf="@+id/percent"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>